--- a/model/build.gradle
+++ b/model/build.gradle
@@ -17,10 +17,10 @@ repositories {
 
 dependencies {
     compile 'com.google.inject:guice:4.1.0'
+    compile 'com.google.guava:guava:24.0-jre'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'
-
 }
