--- a/gamesim/build.gradle
+++ b/gamesim/build.gradle
@@ -18,6 +18,9 @@ repositories {
 dependencies {
     compile 'com.google.inject:guice:4.1.0'
     compile 'com.google.guava:guava:24.0-jre'
+    compile "org.functionaljava:functionaljava:4.7"
+    compile "org.functionaljava:functionaljava-java8:4.7"
+    compile "org.functionaljava:functionaljava-java-core:4.7"
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
